crates/squealy/tests/compile_fail/aggregate_order_by_rejected_for_scalar_select.stderr
error[E0271]: type mismatch resolving `<ColumnRef<'_, UserId> as ProjectionClass>::Class == AggregateProjection`
  --> tests/compile_fail/aggregate_order_by_rejected_for_scalar_select.rs:16:10
   |
16 |         .select(|(user,)| user.id);
   |          ^^^^^^ expected `AggregateProjection`, found `ScalarProjection`
   |
   = note: required for `Ungrouped` to implement `squealy::ValidSelect<ColumnRef<'_, UserId>, OrderAggregate>`
note: required by a bound in `squealy::SourceQuery::select`
  --> src/query.rs
   |
   |     fn select<P, Indices>(
   |        ------ required by a bound in this associated function
...
   |             crate::ValidSelect<P, <Self as SelectAst<'conn, 'scope, Conn>>::OrderClass>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SourceQuery::select`
